@@ -9,10 +9,28 @@
 
 ClassImp(Camera);
 
-/**************************************************************************/
+//==============================================================================
 
 void Camera::Home()
 {
+  mTrans = mHomeTrans;
+  Stamp(FID());
+}
+
+void Camera::Identity()
+{
   mTrans.UnitTrans();
   Stamp(FID());
+}
+
+//==============================================================================
+
+void Camera::SetHomeTrans()
+{
+  mHomeTrans = mTrans;
+}
+
+void Camera::ResetHomeTrans()
+{
+  mHomeTrans.UnitTrans();
 }
