@@ -10,14 +10,22 @@
 #include <Glasses/ZNode.h>
 #include <Stones/ZTrans.h>
 
-class Camera : public ZNode {
+class Camera : public ZNode
+{
   MAC_RNR_FRIENDS(Camera);
   friend class Pupil;
+
+protected:
+  ZTrans  mHomeTrans; // X{R}
 
 public:
   Camera(const Text_t* n="Camera", const Text_t* t=0) : ZNode(n, t) {}
 
-  void Home(); // X{E} 7 MButt()
+  void Home();     // X{E} 7 MButt(-join=>1)
+  void Identity(); // X{E} 7 MButt()
+
+  void SetHomeTrans();   // X{E} 7 MButt(-join=>1)
+  void ResetHomeTrans(); // X{E} 7 MButt()
 
 #include "Camera.h7"
   ClassDef(Camera, 1);
